# preschool-coding

./: .gitignore  README.md  meson.build  number_guess.f90  number_guess.py  numerical.f90  prime_test.f90  pyproject.toml  rock_paper_scissor.py  rock_paper_scissors.py  setup.cfg  setup.py
