[metadata]
name = codeintro
version = 1.0.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/preschool-coding
description = Code developed with and for preschool coding education
keywords =
  preschool
  coding
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: End Users
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
